cmake_minimum_required(VERSION 2.6)
add_subdirectory("Ping")
add_subdirectory("Timestamping")
add_subdirectory("SendEmail")
add_subdirectory("Compression")
add_subdirectory("Router2")
add_subdirectory("ComprehensiveTest")
add_subdirectory("CrossConnectionTest")
add_subdirectory("TestDLL")
add_subdirectory("TeamBalancer")
add_subdirectory("LANServerDiscovery")
add_subdirectory("Encryption")
add_subdirectory("Tests")
add_subdirectory("ThreadTest")
add_subdirectory("PacketLogger")
add_subdirectory("NATCompleteServer")
add_subdirectory("NATCompleteClient")
add_subdirectory("ServerClientTest2")
add_subdirectory("BigPacketTest")
add_subdirectory("CommandConsoleClient")
add_subdirectory("UDPForwarder")
add_subdirectory("ServerClientTest")
add_subdirectory("FCMHostSimultaneous")
add_subdirectory("MessageSizeTest")
add_subdirectory("FileListTransfer")
add_subdirectory("CommandConsoleServer")
add_subdirectory("MessageFilter")
add_subdirectory("BitStream")
add_subdirectory("ReplicaManager3")
add_subdirectory("FCMHost")
add_subdirectory("RPC4")
add_subdirectory("OfflineMessagesTest")
add_subdirectory("Chat Example")
add_subdirectory(AutopatcherClient)
IF(BUILDLOBBY2CLIENT )
	add_subdirectory(Lobby2Client)
ENDIF(BUILDLOBBY2CLIENT )
IF(USEMYSQL AND NOT DISABLEDEPENDENCIES)
	add_subdirectory(AutoPatcherServer_MySQL)
ENDIF(USEMYSQL AND NOT DISABLEDEPENDENCIES)
IF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES)
	add_subdirectory(AutopatcherServer)
ENDIF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES)
add_subdirectory(AutopatcherClientRestarter)
IF (PS3ENABLED)
	add_subdirectory("PS3")
ENDIF(PS3ENABLED)
IF(USEPORTAUDIO AND USESPEEX AND NOT DISABLEDEPENDENCIES OR WIN32NOTUNIX)
	add_subdirectory(RakVoice)
ENDIF(USEPORTAUDIO AND USESPEEX AND NOT DISABLEDEPENDENCIES OR WIN32NOTUNIX)
add_subdirectory("Dropped Connection Test")
add_subdirectory("Flow Control Test")
add_subdirectory("Reliable Ordered Test")
add_subdirectory("Client File Verification")
IF (WIN32 AND NOT UNIX)
	add_subdirectory(CrashReporter)
	IF(USESCALEFORM AND NOT DISABLEDEPENDENCIES)
		add_subdirectory(AutopatcherClientGFx3.0)
	ENDIF(USESCALEFORM AND NOT DISABLEDEPENDENCIES)
ENDIF(WIN32 AND NOT UNIX)
add_subdirectory(DirectoryDeltaTransfer)
add_subdirectory(PHPDirectoryServer2)
IF(USEBOOST AND NOT DISABLEDEPENDENCIES)
	add_subdirectory(RPC3)
ENDIF(USEBOOST AND NOT DISABLEDEPENDENCIES)
IF(WIN32 AND NOT UNIX)
	IF(USEDSOUND)
		add_subdirectory(RakVoiceDSound)
	ENDIF(USEDSOUND)
ENDIF(WIN32 AND NOT UNIX)
IF (USEFMOD AND USEPORTAUDIO AND USESPEEX AND NOT DISABLEDEPENDENCIES OR WIN32NOTUNIX)
	add_subdirectory(RakVoiceFMOD)
ENDIF(USEFMOD AND USEPORTAUDIO AND USESPEEX AND NOT DISABLEDEPENDENCIES OR WIN32NOTUNIX)


