lib_LTLIBRARIES 		= libraknet.la
libraknet_la_LDFLAGS		= -version-info 0:0:0 $(PTHREAD_LIBS) $(PTHREAD_CFLAGS)
libraknet_la_CPPFLAGS		= $(PTHREAD_CFLAGS)
libraknet_la_SOURCES		= 	AsynchronousFileIO.cpp \
AutoRPC.cpp \
BigInt.cpp \
BitStream.cpp \
BitStream_NoTemplate.cpp \
CheckSum.cpp \
CommandParserInterface.cpp \
ConnectionGraph.cpp \
ConsoleServer.cpp \
DataBlockEncryptor.cpp \
DataCompressor.cpp \
DirectoryDeltaTransfer.cpp \
DS_BytePool.cpp \
DS_ByteQueue.cpp \
DS_HuffmanEncodingTree.cpp \
DS_Table.cpp \
EmailSender.cpp \
EncodeClassName.cpp \
EpochTimeToString.cpp \
ExtendedOverlappedPool.cpp \
FCMHost.cpp \
FileList.cpp \
FileListTransfer.cpp \
FileOperations.cpp \
FormatString.cpp \
FullyConnectedMesh.cpp \
FunctionThread.cpp \
Gen_RPC8.cpp \
GetTime.cpp \
GridSectorizer.cpp \
HTTPConnection.cpp \
IncrementalReadInterface.cpp \
InlineFunctor.cpp \
Itoa.cpp \
LightweightDatabaseClient.cpp \
LightweightDatabaseCommon.cpp \
LightweightDatabaseServer.cpp \
LinuxStrings.cpp \
LogCommandParser.cpp \
MessageFilter.cpp \
NatPunchthrough.cpp \
NetworkIDManager.cpp \
NetworkIDObject.cpp \
PacketConsoleLogger.cpp \
PacketFileLogger.cpp \
PacketLogger.cpp \
PluginInterface.cpp \
RakMemoryOverride.cpp \
RakNetCommandParser.cpp \
RakNetStatistics.cpp \
RakNetTransport.cpp \
RakNetTypes.cpp \
RakNetworkFactory.cpp \
RakPeer.cpp \
RakSleep.cpp \
RakString.cpp \
RakThread.cpp \
Rand.cpp \
ReadyEvent.cpp \
ReliabilityLayer.cpp \
ReplicaManager.cpp \
ReplicaManager2.cpp \
rijndael.cpp \
Router.cpp \
RPCMap.cpp \
RSACrypt.cpp \
SHA1.cpp \
SimpleMutex.cpp \
SocketLayer.cpp \
StringCompressor.cpp \
StringTable.cpp \
SuperFastHash.cpp \
SystemAddressList.cpp \
TableSerializer.cpp \
TCPInterface.cpp \
TelnetTransport.cpp \
ThreadsafePacketLogger.cpp \
WSAStartupSingleton.cpp \
_FindFirst.cpp

pkginclude_HEADERS =	AsynchronousFileIO.h \
AutopatcherPatchContext.h \
AutopatcherRepositoryInterface.h \
AutoRPC.h \
BigInt.h \
BitStream.h \
BitStream_NoTemplate.h \
CheckSum.h \
ClientContextStruct.h \
CommandParserInterface.h \
ConnectionGraph.h \
ConsoleServer.h \
DataBlockEncryptor.h \
DataCompressor.h \
DirectoryDeltaTransfer.h \
DS_BinarySearchTree.h \
DS_BPlusTree.h \
DS_BytePool.h \
DS_ByteQueue.h \
DS_Heap.h \
DS_HuffmanEncodingTree.h \
DS_HuffmanEncodingTreeFactory.h \
DS_HuffmanEncodingTreeNode.h \
DS_LinkedList.h \
DS_List.h \
DS_Map.h \
DS_MemoryPool.h \
DS_OrderedChannelHeap.h \
DS_OrderedList.h \
DS_Queue.h \
DS_QueueLinkedList.h \
DS_RangeList.h \
DS_Table.h \
DS_Tree.h \
DS_WeightedGraph.h \
EmailSender.h \
EpochTimeToString.h \
Export.h \
ExtendedOverlappedPool.h \
FCMHost.h \
FileList.h \
FileListNodeContext.h \
FileListTransfer.h \
FileListTransferCBInterface.h \
FileOperations.h \
FormatString.h \
FullyConnectedMesh.h \
FunctionThread.h \
Gen_RPC8.h \
GetTime.h \
GridSectorizer.h \
HTTPConnection.h \
IncrementalReadInterface.h \
InlineFunctor.h \
InternalPacket.h \
Itoa.h \
Kbhit.h \
LightweightDatabaseClient.h \
LightweightDatabaseCommon.h \
LightweightDatabaseServer.h \
LinuxStrings.h \
LobbyClientInterface.h \
LogCommandParser.h \
MessageFilter.h \
MessageIdentifiers.h \
MTUSize.h \
NativeTypes.h \
NatPunchthrough.h \
NetworkIDManager.h \
NetworkIDObject.h \
PacketConsoleLogger.h \
PacketFileLogger.h \
PacketLogger.h \
PacketPool.h \
PacketPriority.h \
Platform.h \
PluginInterface.h \
RakAssert.h \
RakMemoryOverride.h \
RakNetCommandParser.h \
RakNetDefines.h \
RakNetStatistics.h \
RakNetTime.h \
RakNetTransport.h \
RakNetTypes.h \
RakNetVersion.h \
RakNetworkFactory.h \
RakPeer.h \
RakPeerInterface.h \
RakSleep.h \
RakString.h \
RakThread.h \
Rand.h \
ReadyEvent.h \
RefCountedObj.h \
ReliabilityLayer.h \
Replica.h \
ReplicaEnums.h \
ReplicaManager.h \
ReplicaManager2.h \
Rijndael-Boxes.h \
Rijndael.h \
Router.h \
RouterInterface.h \
RPCMap.h \
RPCNode.h \
RSACrypt.h \
SHA1.h \
SimpleMutex.h \
SimpleTCPServer.h \
SingleProducerConsumer.h \
SocketLayer.h \
StringCompressor.h \
StringTable.h \
SuperFastHash.h \
SystemAddressList.h \
TableSerializer.h \
TCPInterface.h \
TelnetTransport.h \
ThreadPool.h \
ThreadsafePacketLogger.h \
TransportInterface.h \
WSAStartupSingleton.h \
_FindFirst.h

EXTRA_DIST = RakNet.vcproj RakNet3.0.vcproj RakNet3.0.vcproj.user RakNet_vc8.vcproj

